--- a/src/main/resources/com/hogwartscompany/softclient/detailsService.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/detailsService.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +13,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.DetailsServiceSiteController">
    <children>
-      <ImageView fitHeight="700.0" fitWidth="800.0" opacity="0.3" pickOnBounds="true">
+      <ImageView fitHeight="700.0" fitWidth="1200.0" opacity="0.3" pickOnBounds="true">
          <image>
             <Image url="@../../../assets/image/wallpaper.jpg" />
          </image>
@@ -102,7 +105,7 @@
             <Font name="Lucida Sans Regular" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonClosePopUp" layoutX="728.0" layoutY="19.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;">
+      <Button fx:id="buttonClosePopUp" layoutX="1129.0" layoutY="19.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;">
          <graphic>
             <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -124,5 +127,29 @@
       </Label>
       <TextField fx:id="nameWorksite" layoutX="462.0" layoutY="98.0" prefHeight="35.0" prefWidth="243.0" />
       <TextField fx:id="worksiteServiceSite" layoutX="405.0" layoutY="98.0" prefHeight="35.0" prefWidth="51.0" />
+      <Separator layoutX="725.0" layoutY="9.0" orientation="VERTICAL" prefHeight="681.0" prefWidth="8.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="748.0" layoutY="14.0" prefHeight="53.0" prefWidth="369.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Liste employés" textAlignment="CENTER">
+         <font>
+            <Font name="Lucida Sans Regular" size="26.0" />
+         </font>
+      </Label>
+      <TableView fx:id="listEmployeesOfService" layoutX="754.0" layoutY="93.0" prefHeight="581.0" prefWidth="428.0">
+        <columns>
+          <TableColumn fx:id="idEmployeeOfService" prefWidth="75.0" text="ID Employé" visible="false" />
+          <TableColumn fx:id="firstNameEmployeeOfService" prefWidth="75.0" text="Prénom" />
+            <TableColumn fx:id="lastNameEmployeeOfService" prefWidth="75.0" text="Nom" />
+            <TableColumn fx:id="phoneEmployeeOfService" prefWidth="75.0" text="Téléphone" />
+            <TableColumn fx:id="cellphoneEmployeeOfService" prefWidth="75.0" text="Portable" />
+            <TableColumn fx:id="jobEmployeeOfService" prefWidth="75.0" text="Job" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="209.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Création">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
