--- a/src/main/resources/com/hogwartscompany/softclient/searchResults.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/searchResults.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #14A1D9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.SearchController">
-    <!--<fx:include fx:id="header" source="header.fxml" />-->
+    <fx:include fx:id="header" source="header.fxml" />
     <children>
       <TabPane fx:id="resultsTable" layoutY="186.0" prefHeight="616.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
